# SUML

./: README.md  color_values.txt  interior_values.txt  main.py  make_model_trim.txt  pyproject.toml  requirements.txt  score_model.py  train_model.py  transmission_values.txt
conf/base/: catalog.yml
data/03_primary/: car_mapping.json  colors.csv  interior.csv  transmission.csv
data/06_models/model_2024-06-09_19-39-35/: learner.pkl  metadata.json  metrics.txt
data/06_models/model_2024-06-09_19-39-35/models/: trainer.pkl
data/06_models/model_2024-06-09_19-39-35/models/KNeighborsDist_BAG_L1_FULL/: model.pkl
data/06_models/model_2024-06-09_19-41-50/: learner.pkl  metrics.txt
data/06_models/model_2024-06-09_19-41-50/models/: trainer.pkl
data/06_models/model_2024-06-29_12-45-47/: learner.pkl  metadata.json  metrics.txt
data/06_models/model_2024-06-29_12-45-47/models/: trainer.pkl
data/06_models/model_2024-06-29_12-47-21/: learner.pkl  metrics.txt
data/06_models/model_2024-06-29_12-47-21/models/: trainer.pkl
data/06_models/model_2024-06-29_12-59-07/: learner.pkl  metrics.txt
data/06_models/model_2024-06-29_12-59-07/models/: trainer.pkl
data/06_models/model_2024-06-29_13-01-18/: learner.pkl  metadata.json  metrics.txt
data/06_models/model_2024-06-29_13-01-18/models/: trainer.pkl
notebooks/: EDA.ipynb
src/suml_kedro/: __init__.py  __main__.py
src/suml_kedro/pipelines/data_processing/: nodes.py  pipeline.py
src/suml_kedro/pipelines/data_science/: nodes.py  pipeline.py
src/suml_kedro/pipelines/reporting/: nodes.py  pipeline.py
(+21 files in other folders)
