[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "suml_kedro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
suml-kedro = "suml_kedro.__main__:main"

[tool.kedro]
package_name = "suml_kedro"
project_name = "suml_kedro"
kedro_init_version = "0.19.6"
tools = [ "Data Structure", "Kedro Viz",]
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "suml_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
